--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <!-- ASIDE -->
             <aside class="border flex column">
                   <div class="boxsopra border grow">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, molestiae itaque quisquam veritatis vel harum nulla labore possimus qui consequatur, reiciendis voluptates impedit laboriosam assumenda iusto hic dolorem, repellat nesciunt deleniti nihil debitis est vitae sit. Commodi ut rerum ipsa labore! Tempora amet earum ipsa a corrupti officiis fugit obcaecati recusandae nobis, sed necessitatibus velit quod. Tempore ut delectus officiis beatae ipsa similique sapiente adipisci iusto, eligendi ab eaque sed enim, in fugit fuga minima illum laboriosam atque cupiditate error consequatur! Dignissimos tempore recusandae delectus neque voluptatum eos voluptates eius quasi ipsam eum, iusto odit! Asperiores odio, veritatis sequi id minima voluptas dicta debitis facere distinctio rem esse soluta tempore ratione, modi sint recusandae incidunt! Earum sint non nobis dicta quas obcaecati itaque adipisci reiciendis iure quae asperiores, pariatur illum ipsam possimus molestiae voluptates id magnam odit voluptatibus! Perspiciatis possimus deleniti eius animi incidunt similique et reprehenderit ipsum beatae quos dolorem, eos eligendi pariatur laboriosam, dolore doloribus eaque laborum veniam voluptatum natus inventore reiciendis, necessitatibus sapiente ut? Architecto doloribus consequatur magni velit voluptatum amet harum quis voluptatem reiciendis nulla. Eveniet architecto, nostrum similique vitae magni aut ab quisquam, magnam eos atque at possimus ut excepturi iusto inventore doloremque voluptas rerum?
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, rerum repellat amet architecto quasi eligendi veritatis voluptate enim vitae soluta!
                   </div>
                   
                   <div class="boxsotto border box3">
@@ -30,8 +30,8 @@
 
             <!-- CATALOG-->
             <section id="catalog" class="border">
-                  <header class="box3 border">
-
+                  <header class="border">
+                        <div class="overlay"></div>
                   </header>
 
                   <div class="square border"></div>
