--- a/index.html
+++ b/index.html
@@ -43,8 +43,30 @@
       </main>
 
       <!-- FOOTER  -->
-      <footer class="box2">
+      <footer class="flex justify-between">
+            <div class="side flex align-center justify-between box2 border">
+                  <div class="flex align-center">
+                        <img src="img/sinister.jpeg" alt="sinister">
 
+                        <div class="flex column justify-center">
+                              <div>Sinister</div>
+                              <div>Brano nome</div>
+                        </div>
+                  </div>
+
+                  <div class="icons">
+                        <button><i class="fa-regular fa-heart"></i></button>
+                        <button><i class="fa-regular fa-folder"></i></button>
+                  </div>
+            </div>
+
+            <div class="center box2 border">
+
+            </div>
+
+            <div class="side box2 border">
+
+            </div>
       </footer>
       
 </body>
