footer quasi completo

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       <!-- FOOTER  -->
       <footer class="flex justify-between">
-            <div class="side flex align-center justify-between box2 border">
+            <div class="side side-left flex align-center justify-between border">
                   <div class="flex align-center">
                         <img src="img/sinister.jpeg" alt="sinister">
 
@@ -60,12 +60,42 @@
                   </div>
             </div>
 
-            <div class="center box2 border">
+            <div class="center">
+                  <div class="player flex align-center justify-center">
+                        <button><i class="fa-solid fa-shuffle"></i></button>
+                        <button><i class="fa-solid fa-backward-step"></i></button>
+                        <button class="play"><i class="fa-regular fa-circle-play"></i></button>
+                        <button><i class="fa-solid fa-forward-step"></i></button>
+                        <button><i class="fa-sharp fa-solid fa-rotate-right"></i></button>
+                  </div>
 
+                  <div class="flex align-center justify-center">
+                        <span>0:25</span>
+
+                        <div class="progress-bar empty">
+                              <div class="progress-bar step flex align-center">
+                                    <div class="circle-bar"></div>
+                              </div>
+                        </div>
+
+                        <span>4:35</span>
+                  </div>
             </div>
 
-            <div class="side box2 border">
+            <div class="side side-right flex align-center justify-between border">
+                  <div class="flex align-center">
+                        <div class="icons">
+                              <button><i class="fa-solid fa-list"></i></button>
+                              <button><i class="fa-solid fa-display"></i></button>
+                              <button><i class="fa-solid fa-volume-high"></i></button>
+                        </div>
 
+                        <div class="progress-bar empty">
+                              <div class="progress-bar step flex align-center">
+                                    <div class="circle-bar"></div>
+                              </div>
+                        </div>
+                  </div>
             </div>
       </footer>
       
