footer fatto o quasi

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                         <img src="img/sinister.jpeg" alt="sinister">
 
                         <div class="flex column justify-center">
-                              <div>Sinister</div>
-                              <div>Brano nome</div>
+                              <div class="artist">Sinister</div>
+                              <div class="song">Brano nome</div>
                         </div>
                   </div>
 
