--- a/index.html
+++ b/index.html
@@ -19,8 +19,48 @@
       <main class="box flex">
             <!-- ASIDE -->
             <aside class="border flex column">
-                  <div class="boxsopra border grow">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, rerum repellat amet architecto quasi eligendi veritatis voluptate enim vitae soluta!
+                  <div class="logo">
+                        <img src="img/logo.svg" alt="spotify-logo">
+                  </div>
+
+                  <div class="mini-logo">
+                        <img src="img/logo-small.svg" alt="spotify-logo-mini">
+                  </div>
+
+                  <div class="flex column grow">
+                        <ul>
+                              <li class="flex align-center">
+                                    <img src="img/home.svg" alt="home">
+                                    <span>Home</span>
+                              </li>
+                              <li class="flex align-center">
+                                    <img src="img/search.svg" alt="search">
+                                    <span>Cerca</span>
+                              </li>
+                              <li class="flex align-center">
+                                    <img src="img/libreria.svg" alt="library">
+                                    <span>La tua libreria</span>
+                              </li>
+                        </ul>
+
+                        <div class="flex">
+                              <div>PLAYLIST</div>
+                              <button>
+                                    <img src="img/" alt="">
+                              </button>
+                        </div>
+
+                        <div class="playlist">
+                              <ul>
+                                    <li>Nuova playlist</li>
+                                    <li>Nuova playlist</li>
+                                    <li>Nuova playlist</li>
+                                    <li>Nuova playlist</li>
+                                    <li>Nuova playlist</li>
+                                    <li>Nuova playlist</li>
+                                    <li>Nuova playlist</li>
+                              </ul>
+                        </div>
                   </div>
                   
                   <div class="boxsotto border box3">
@@ -30,9 +70,9 @@
 
             <!-- CATALOG-->
             <section id="catalog" class="border">
-                  <header class="border">
+                  <div class="cta">
                         <div class="overlay"></div>
-                  </header>
+                  </div>
 
                   <div class="square border"></div>
                   <div class="square border"></div>
@@ -82,9 +122,9 @@
                   </div>
             </div>
 
-            <div class="side side-right flex align-center justify-between border">
+            <div class="side side-right flex align-center border">
                   <div class="flex align-center">
-                        <div class="icons">
+                        <div class="icons flex align-center">
                               <button><i class="fa-solid fa-list"></i></button>
                               <button><i class="fa-solid fa-display"></i></button>
                               <button><i class="fa-solid fa-volume-high"></i></button>
