aside quasi fatto

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
       <!-- MAIN  -->
-      <main class="box flex">
+      <main class="flex">
             <!-- ASIDE -->
             <aside class="border flex column">
                   <div class="logo">
@@ -43,11 +43,12 @@
                               </li>
                         </ul>
 
-                        <div class="flex">
-                              <div>PLAYLIST</div>
-                              <button>
-                                    <img src="img/" alt="">
-                              </button>
+                        <div class="new-playlist">
+                              <span>PLAYLIST</span>
+                              <div>
+                                    <button>+</button>
+                                    <span>Crea Playlist</span>
+                              </div>
                         </div>
 
                         <div class="playlist">
@@ -63,8 +64,15 @@
                         </div>
                   </div>
                   
-                  <div class="boxsotto border box3">
-                        
+                  <div class="profile">
+                        <div class="install flex align-center">
+                              <img src="img/download.svg" alt="download">
+                              <span>Installa app</span>
+                        </div>
+                        <div class="user flex align-center">
+                              <img src="img/profile.svg" alt="user">
+                              <span>John Doe</span>
+                        </div>
                   </div>
             </aside>
 
