quasi finito (manca hover in buttonfooter)

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
                   </nav>
                   
                   <div class="profile">
-                        <div class="install flex align-center">
+                        <a href="" class="install flex align-center">
                               <img src="img/download.svg" alt="download">
                               <span>Installa app</span>
-                        </div>
+                        </a>
                         <div class="user flex align-center">
                               <img src="img/profile.svg" alt="user">
                               <span>John Doe</span>
