--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         
                         <div class="flex column">
                               <ul class="flex column">
-                                    <li>
+                                    <li class="special-li">
                                           <a href="" class="flex align-center">
                                                 <img src="img/home.svg" alt="home">
                                                 <span>Home</span>
@@ -236,8 +236,8 @@
                         <img src="img/sinister.jpeg" alt="sinister">
 
                         <div class="flex column justify-center">
-                              <div class="artist">Sinister</div>
-                              <div class="song">Brano nome</div>
+                              <a href="" class="artist">Sinister</a>
+                              <a href="" class="song">Brano nome</a>
                         </div>
                   </div>
 
